.metadata/.plugins/com.provar.eclipse.ui/00DM0000001eO1fMAE/objects/Opp_Product__c.object
<CustomObject>
    <fields>
        <fullName>ATC_P_List__c</fullName>
        <label>ATC P List</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATC_Packages__c</fullName>
        <label>ATC Packages</label>
        <picklist>
            <picklistValues>
                <fullName>Dealer Subscribes to ATC Used Car Classifieds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer is canceling ALL ATC (requires KBB Standalone)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer is keeping ATC standalone packages* (req. KBB Std alone)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Opportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_SVOC_Id__c</fullName>
        <formula>Opportunity__r.Account.SVOC_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account SVOC Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Notes__c</fullName>
        <label>Additional Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Advertised_Make_AC__c</fullName>
        <label>Advertised Make (AC)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advertised_Make_EM__c</fullName>
        <label>Advertised Make (EM)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advertised_Make_UM_1__c</fullName>
        <label>Advertised Make (UM 1)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advertised_Make_UM_2__c</fullName>
        <label>Advertised Make (UM 2)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advertised_Make_UM_3__c</fullName>
        <label>Advertised Make (UM 3)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alpha_Make__c</fullName>
        <label>Alpha Make</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Any_Car_Amount__c</fullName>
        <label>Any Car $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Any_Car_Co_Op__c</fullName>
        <label>Any Car Co-Op</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Any_Car__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Any Car</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approved_Future_Delivery__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved Future Delivery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Artwork__c</fullName>
        <label>Artwork</label>
        <picklist>
            <picklistValues>
                <fullName>Use Existing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enclose</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use Dealer Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use Co-Op Template</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Make Simple Logo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent EQS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Co-Op Pre-Approval</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BAC_Code__c</fullName>
        <label>BAC Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_ID__c</fullName>
        <label>Bill To ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Type__c</fullName>
        <label>Business Type</label>
        <picklist>
            <picklistValues>
                <fullName>NB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Call_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Call Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Chat__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Chat</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Classified_Package_1__c</fullName>
        <label>Classified Package 1</label>
        <picklist>
            <picklistValues>
                <fullName>Connector</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fusion</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Classified_Package_2__c</fullName>
        <label>Classified Package 2</label>
        <picklist>
            <picklistValues>
                <fullName>Connector</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fusion</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Classified_Package_3__c</fullName>
        <label>Classified Package 3</label>
        <picklist>
            <picklistValues>
                <fullName>Connector</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fusion</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Classified_Package__c</fullName>
        <inlineHelpText>KBB used classified package - connector, fusion</inlineHelpText>
        <label>Classified Package</label>
        <picklist>
            <picklistValues>
                <fullName>Connector</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fusion</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Co_Op_Make__c</fullName>
        <inlineHelpText>Enter the Make of the Co-Op</inlineHelpText>
        <label>Co-Op Make</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Op_Pre_Approval_Case__c</fullName>
        <label>Co-Op Pre-Approval Case #</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Op__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Co-Op</description>
        <label>Co-Op</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cobalt_URL__c</fullName>
        <label>Cobalt URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_Template_Id__c</fullName>
        <label>Conga Template Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Connections_Exp_C__c</fullName>
        <label>Connections Exp $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Connections_Exp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Connections Exp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Connections_Pro_Amount_c__c</fullName>
        <label>Connections Pro $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Connections_Pro__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Connections Pro</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Counties__c</fullName>
        <label>Counties</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DMA__c</fullName>
        <label>DMA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Code__c</fullName>
        <label>Dealer Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Ratings_Link__c</fullName>
        <label>Dealer Ratings Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Dealer_Ratings_List__c</fullName>
        <label>Dealer Ratings List</label>
        <picklist>
            <picklistValues>
                <fullName>DealerRater.com</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dealer_Ratings_PL__c</fullName>
        <label>Dealer Ratings (PL)</label>
        <picklist>
            <picklistValues>
                <fullName>Kudzu.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yelp.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CitySearch.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DealerRater.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dealer_Ratings__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dealer Ratings</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deliver_1__c</fullName>
        <label>Deliver (1)</label>
        <picklist>
            <picklistValues>
                <fullName>Deliver Now</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deliver 1st of next month</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deliver_2__c</fullName>
        <label>Deliver (2)</label>
        <picklist>
            <picklistValues>
                <fullName>Deliver Now</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deliver 1st of next month</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deliver_3__c</fullName>
        <label>Deliver (3)</label>
        <picklist>
            <picklistValues>
                <fullName>Deliver Now</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deliver 1st of next month</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Delivery_Date__c</fullName>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Document_Action__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Id, &quot;View&quot;, &quot;_blank&quot;)
&amp; &quot; | &quot; &amp;
HYPERLINK(&quot;/apex/&quot;
&amp; TerraSky_Page__c
&amp; &quot;?Id=&quot; &amp; Id, &quot;Edit Sales Order Form&quot;, &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Action</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duration_1__c</fullName>
        <label>Duration (1)</label>
        <picklist>
            <picklistValues>
                <fullName>4 Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14 Day (inc. car swap)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28 Day (inc. car swap)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Duration_2__c</fullName>
        <label>Duration (2)</label>
        <picklist>
            <picklistValues>
                <fullName>4 Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14 Day (inc. car swap)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28 Day (inc. car swap)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Duration_3__c</fullName>
        <label>Duration (3)</label>
        <picklist>
            <picklistValues>
                <fullName>4 Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14 Day (inc. car swap)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28 Day (inc. car swap)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Early_Model_Amount__c</fullName>
        <label>Early Model $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Early_Model_Co_Op__c</fullName>
        <label>Early Model Co-Op</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Early_Model__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Early Model</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Chat__c</fullName>
        <label>Email (Chat)</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Enhanced_Call_Tracking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enhanced Call Tracking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enhanced_Features_Total__c</fullName>
        <label>Enhanced Features Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Facebook_ID__c</fullName>
        <label>Facebook ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facebook_Inventory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Facebook Inventory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Facebook_Page__c</fullName>
        <label>Facebook Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facebook__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Facebook</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Name_Chat__c</fullName>
        <label>First Name (Chat)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Franchise_Makes__c</fullName>
        <label>Franchise Makes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Front_line_Pro_10__c</fullName>
        <label>Front-line Pro (10)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Front_line_Pro_11__c</fullName>
        <label>Front-line Pro (11)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Front_line_Pro_1__c</fullName>
        <label>Front-line Pro (1)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fulfillment_Action__c</fullName>
        <description>&quot;&amp;OCNR=0&quot; &amp; 
&amp;
&quot;&amp;EmailSubject=DO:&quot; &amp; Opportunity__r.Account.SVOC_Id__c &amp; &quot;:&quot; &amp; Opportunity__r.Account.Name &amp; &quot;:&quot; &amp; RecordType.Name

&quot;&amp;EmailToId=003c000000X6ffV&quot; &amp;
&quot;&amp;EmailToId=003c000000XDBkM&quot; &amp;
&quot;&amp;EmailAdditionalTo=chris.raskulinecz%40autotradergroup%2Ecom&quot; &amp; - Can&apos;t use additional to alone because we want to attach the email to a record</description>
        <formula>HYPERLINK(
&quot;https://composer.congamerge.com?SessionId=&quot; &amp; $Api.Session_ID &amp;
&quot;&amp;ServerUrl=&quot; &amp; $Api.Partner_Server_URL_290 &amp;
&quot;&amp;Id=&quot; &amp; Id &amp;
&quot;&amp;TemplateId=&quot; &amp; Conga_Template_Id__c &amp;
&quot;&amp;reportId=[OppProd]00OE0000002Nt75?pv0=&quot; &amp; Id &amp;
&quot;&amp;DefaultPDF=1&quot; &amp;
&quot;&amp;OCNR=0&quot; &amp; 
&quot;&amp;LG3=2&quot; &amp;
&quot;&amp;AttachmentParentId=&quot; &amp; Opportunity__r.Id &amp;
&quot;&amp;OFN=&quot; &amp; RecordType.Name &amp; &quot; - &quot; &amp; Opportunity__r.Account.Name &amp;
&quot;&amp;DS7=12&quot; &amp;
&quot;&amp;AC0=1&quot; &amp; 
&quot;&amp;MFTS0=Sent__c&quot; &amp; 
&quot;&amp;MFTSValue0=1&quot; &amp; 
&quot;&amp;UF0=1&quot; &amp; 
&quot;&amp;EmailRelatedToId=&quot; &amp; Id &amp;
&quot;&amp;EmailToId=003E0000015x182&quot; &amp;
&quot;&amp;EmailTemplateId=00XE0000000NMiK&quot;
,IF( Sent__c  = false, &quot;Send to Fulfillment&quot;, &quot;Resend to Fulfillment&quot;) , &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fulfillment Action</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GM_Alpha_Term_Length__c</fullName>
        <label>GM Alpha Term Length</label>
        <picklist>
            <picklistValues>
                <fullName>1 Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Months</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GM_Make_Buick__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GM Make Buick</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GM_Make_Cadillac__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GM Make Cadillac</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GM_Make_Chevrolet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GM Make Chevrolet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GM_Make_GMC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GM Make GMC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GM_New_Car_Templates__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GM New Car Templates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GM_Package__c</fullName>
        <label>GM Package</label>
        <picklist>
            <picklistValues>
                <fullName>GM New Car Featured Plus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM New Car Premium Plus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM New Car Premium Max</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Incentives_Amount__c</fullName>
        <label>Incentives $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Incentives_C_C__c</fullName>
        <description>Incentives Core Currency</description>
        <label>Incentives C $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Incentives_C__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Incentives Core</description>
        <label>Incentives C</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incentives_P_C__c</fullName>
        <description>Incentives Plus Currency</description>
        <label>Incentives P $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Incentives_P__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Incentives Plus</description>
        <label>Incentives P</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incentives__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Incentives</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inventory_Per_Make_10__c</fullName>
        <label>Inventory Per Make (10)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inventory_Per_Make_11__c</fullName>
        <label>Inventory Per Make (11)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inventory_Per_Make_1__c</fullName>
        <label>Inventory Per Make (1)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Name__c</fullName>
        <label>Invoice Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KBB_1_Conracts__c</fullName>
        <label>KBB $1 Conracts</label>
        <picklist>
            <picklistValues>
                <fullName>Dealer does not have KBB $1 Contracts in FastLane</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer does have KBB $1 Contracts in FastLane</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>KBB_Num_of_Spotlights__c</fullName>
        <label>KBB # of Spotlights</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KBB_Standalone_Duration__c</fullName>
        <label>KBB Standalone Duration</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name_Chat__c</fullName>
        <label>Last Name (Chat)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Email_Text__c</fullName>
        <label>Lead Email Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Email_XML__c</fullName>
        <label>Lead Email XML</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Base_Rate_10__c</fullName>
        <label>Monthly Base Rate (10)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Base_Rate_11__c</fullName>
        <label>Monthly Base Rate (11)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Base_Rate_1__c</fullName>
        <label>Monthly Base Rate (1)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Quantity_1__c</fullName>
        <label>Monthly Quantity (1)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Quantity_2__c</fullName>
        <label>Monthly Quantity (2)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Quantity_3__c</fullName>
        <label>Monthly Quantity (3)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Rate__c</fullName>
        <label>Monthly Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Car_Co_op_10__c</fullName>
        <label>New Car Co-op (10)</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>New_Car_Co_op_11__c</fullName>
        <label>New Car Co-op (11)</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>New_Car_Co_op_1__c</fullName>
        <label>New Car Co-op (1)</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>New_Car_Email_T__c</fullName>
        <label>New Car Email (T)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Car_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Car Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Car_Featured_Core_10__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Car Featured Core (10)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Car_Featured_Core_11__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Car Featured Core (11)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Car_Featured_Core_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Car Featured Core (1)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Car_Featured_Plus_10__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Car Featured Plus (10)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Car_Featured_Plus_11__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Car Featured Plus (11)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Car_Featured_Plus_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Car Featured Plus (1)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Car_Make_10__c</fullName>
        <label>New Car Make (10)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Car_Make_11__c</fullName>
        <label>New Car Make (11)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Car_Make_1__c</fullName>
        <label>New Car Make (1)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Car_Premium_Core_10__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Car Premium Core (10)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Car_Premium_Core_11__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Car Premium Core (11)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Car_Premium_Core_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Car Premium Core (1)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Car_Premium_Max_10__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Car Premium Max (10)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Car_Premium_Max_11__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Car Premium Max (11)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Car_Premium_Max_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Car Premium Max (1)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Car_Premium_Plus_10__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Car Premium Plus (10)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Car_Premium_Plus_11__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Car Premium Plus (11)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Car_Premium_Plus_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Car Premium Plus (1)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Re_Direct__c</fullName>
        <label>New Re-Direct</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Num_Any_Car__c</fullName>
        <label># Any Car</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_Early_Model__c</fullName>
        <label># Early Model</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_Spotlights__c</fullName>
        <label># Spotlights</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_Used_Makes_1__c</fullName>
        <label># Used Makes (1)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_Used_Makes_2__c</fullName>
        <label># Used Makes (2)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_Used_Makes_3__c</fullName>
        <label># Used Makes (3)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OE_Action__c</fullName>
        <formula>HYPERLINK( 
&quot;https://composer.congamerge.com?SessionId=&quot; &amp; $Api.Session_ID &amp; 
&quot;&amp;ServerUrl=&quot; &amp; $Api.Partner_Server_URL_290 &amp; 
&quot;&amp;Id=&quot; &amp; Id &amp; 
&quot;&amp;TemplateId=&quot; &amp; Conga_Template_Id__c &amp;
&quot;&amp;reportId=[OppProd]00OL0000000H1Zq?pv0=&quot; &amp; Id &amp;
&quot;&amp;DefaultPDF=1&quot; &amp;
&quot;&amp;AC0=1&quot; &amp;
&quot;&amp;LG3=2&quot; &amp;
&quot;&amp;OCNR=1&quot; &amp;
&quot;&amp;AttachmentParentId=&quot; &amp; Opportunity__r.Id &amp;
&quot;&amp;OFN=&quot; &amp; RecordType.Name &amp; &quot; - &quot; &amp; Opportunity__r.Account.Name &amp;
&quot;&amp;DS7=12&quot; &amp;
&quot;&amp;EmailToId=003L000000PWTHN&quot; &amp;
&quot;&amp;EmailSubject=%22DO%22:&quot; &amp; Opportunity__r.Account.SVOC_Id__c &amp; &quot;:&quot; &amp; Opportunity__r.Account.Name &amp; &quot;:&quot; &amp; RecordType.Name
,&quot;Send to OE&quot;, &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OE Action</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OLD_ACTION__c</fullName>
        <description>This custom field has been replaced by the other Document action field and the Signature action field. Here for historical purposes only. Delete this after go live or Jan 1 2015.</description>
        <formula>HYPERLINK(&quot;/&quot; &amp; Id, &quot;View&quot;, &quot;_blank&quot;)
&amp; &quot; | &quot; &amp;
HYPERLINK(&quot;/apex/&quot;
&amp; TerraSky_Page__c
&amp; &quot;?Id=&quot; &amp; Id, &quot;Form&quot;, &quot;_blank&quot;)
&amp; &quot; | &quot; &amp;
HYPERLINK( 
&quot;https://composer.congamerge.com?SessionId=&quot; &amp; $Api.Session_ID &amp; 
&quot;&amp;ServerUrl=&quot; &amp; $Api.Partner_Server_URL_290 &amp; 
&quot;&amp;Id=&quot; &amp; Id &amp; 
&quot;&amp;TemplateId=&quot; &amp; Conga_Template_Id__c &amp;
&quot;&amp;reportId=[OppProd]00OL0000000OvQK?pv0=&quot; &amp; Id &amp;
&quot;&amp;DefaultPDF=1&quot; &amp;
&quot;&amp;LG4=1&quot; &amp;
&quot;&amp;LG3=2&quot; &amp;
&quot;&amp;AC0=0&quot; &amp;
&quot;&amp;AttachmentParentId=&quot; &amp; Opportunity__r.Id &amp;
&quot;&amp;OFN=&quot; &amp; RecordType.Name &amp; &quot; - &quot; &amp; Opportunity__r.Account.Name &amp;
&quot;&amp;DS7=4&quot; &amp;
&quot;&amp;OCNR=1&quot; &amp;
&quot;&amp;ESRecipient1=&quot; &amp; Opportunity__r.Contact_Email__c &amp;
&quot;&amp;ESRecipient1Role=Signer&quot; &amp;
&quot;&amp;ESOpportunityid=&quot; &amp; Opportunity__r.Id &amp;
&quot;&amp;ESAccountid=&quot; &amp; Opportunity__r.Account.Id &amp;
&quot;&amp;ESAgreementName=&quot; &amp; RecordType.Name &amp; &quot; - &quot; &amp; Opportunity__r.Account.Name &amp;
&quot;&amp;ESSignatureType=2&quot;
,&quot;Signature&quot;, &quot;_blank&quot;)</formula>
        <label>Document Action</label>
        <type>Text</type>
    </fields>
</CustomObject>